<?xml version="1.0"?>
<package format="2">
  <name>camera</name>
  <version>0.0.0</version>
  <description>The camera package</description>

  <maintainer email="florentin.hau@stud.tu-darmstadt.de">jetson</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>opencv</build_depend> <!-- Added OpenCV dependency -->
  <build_depend>cv_bridge</build_depend> <!-- Added cv_bridge dependency -->
  <build_depend>sensor_msgs</build_depend> <!-- Added sensor_msgs dependency -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>opencv</build_export_depend> <!-- Added OpenCV dependency -->
  <build_export_depend>cv_bridge</build_export_depend> <!-- Added cv_bridge dependency -->
  <build_export_depend>sensor_msgs</build_export_depend> <!-- Added sensor_msgs dependency -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>opencv</exec_depend> <!-- Added OpenCV dependency -->
  <exec_depend>cv_bridge</exec_depend> <!-- Added cv_bridge dependency -->
  <exec_depend>sensor_msgs</exec_depend> <!-- Added sensor_msgs dependency -->

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
