<?xml version="1.0"?>
<package format="2">
  <name>motor</name>
  <version>0.0.0</version>
  <description>The motor package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="jetson@todo.todo">jetson</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
